# DiscordConnectionsExample

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
app/: init.py
app/application/api/: main.py
app/application/api/auth/: handlers.py  schemas.py
app/application/api/linked_roles/: handlers.py
app/application/bot/: Dockerfile  main.py
app/application/updater/: main.py
app/bot_application/: main.py
app/domain/entities/: base.py  metadata.py  tokens.py  users.py
app/domain/exceptions/: base.py
app/infra/message_brokers/: base.py  kafka.py
app/infra/repositories/: mongo.py
app/infra/repositories/metadata/: base.py  converters.py  mongo.py
app/infra/repositories/tokens/: base.py  converters.py  mongo.py
app/infra/repositories/users/: base.py  converters.py  mongo.py
app/logic/commands/: metadata.py  tokens.py  users.py
app/logic/exceptions/: base.py  exceptions.py
app/server_application/api/: connections_client.py  main.py
app/server_application/api/auth/: handlers.py
app/server_application/api/linked_roles/: handlers.py
app/settings/: settings.py
bot_app/: Dockerfile  main.py
docker-compose/: app.yaml  broker.yaml
